--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,42 +4,42 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:+lvZfEx39a/w77YoI7X3K60wd7WVt6p58xSH7mS51RNCD2cUFX8jcyRtsar3tbeIyfTAmHX32IBr6RvFs2P5kvY=,iv:bIbPlhA6GQluuezrkHLhCUg6EE3hma9CJbDZ3rzk+Go=,tag:23uKQsi7PBszyBhkHntGFQ==,type:comment]
-    #ENC[AES256_GCM,data:ARfYKWw+onHIPs+zLIoqBGHxGCZDCOdi1V22CJIol4Lj6Tl6jJ8RI1uIVOo=,iv:BLY9TlPXD1VbrPnibZQf8FFEXC6DzTHcgArhqrSuSIc=,tag:Kt8ogdnGPS4k1mR1HTdtPg==,type:comment]
-    VIP: ENC[AES256_GCM,data:4oUFNg/H/P81lY4SfQ==,iv:+MdZgo1SpuhTbcyu5+5KhN85/+KlToO/el+HGwVf+yw=,tag:G1KXekstRK13f7pmMcyNHQ==,type:str]
-    #ENC[AES256_GCM,data:zteY2kd36FYvb/q8XsKdC4wDB82A69R6ITaD,iv:ySUw9wn2h0ByhNI9pPpHn5jxmkJoRRozrYjwthXmQJU=,tag:t2CqGJyRXX0hO7UvbIdWyw==,type:comment]
-    #ENC[AES256_GCM,data:qWiPM2ICbx4zbrMAV/DI9aBNHpmNMNvD3lyFEeTr7Lfkbx9NOYQdDnC82WsulRqPbb3v6T48vlRn+LBEEbsC0zzJHfHXmzzeEScY0S6zrFk64Loq81Zh87I=,iv:MwPtH2qeurSAecCc6OjZRzuSDHghzbJnN+JZfZixMW0=,tag:AMAqahI3YxcUcvOy6Be5fg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:8PVoH1oDcncpWx328sk=,iv:m7asDx5GPn+RdNi/ijNDaxzzDPZIiwwdLNkNMfXyIdU=,tag:bj/9ZUimHJcinlm89xuV9w==,type:str]
-    #ENC[AES256_GCM,data:XoGBv+fIwfmqAc9GfdTQqvKnAbWM2itqNRjaTQRwPztr0g==,iv:9VIKAMj2ue7Z2l8Kou5VtUSL5oiPaujL4Bz19GpvduY=,tag:yrVug3m0tx0J4Xpm97Gtsw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:5Oek45iK7ti0L+rF/Q==,iv:Xb+bkYg6bhznPRwN8aGfPatz4muO0v9aTF+juWzVqtk=,tag:FdTCX2AZS3iM/BxKjQrzrg==,type:str]
-    #ENC[AES256_GCM,data:2fS1o+Y+r6fm0x0Wp17FSgiTmZC4VF8b/WFZDZ3vj540gXO09GLsaEDN63jCzwY=,iv:0fQ7qWCadNVORpYhjB+IZeSPThi6CYxJ2rLF5ibeuJ0=,tag:tdTk3a71iUJgVicNvmoJow==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:40ZoKeSGNq3MesSkMKn6Y4eyALcPkR8B89+65zhiXA==,iv:Vp/lLc6e6xtSHTKcpTngDgsvgxg7VtUNOSmyrcR9mdk=,tag:V8oEnIFwCQi94x7ZnZLJCw==,type:str]
-    #ENC[AES256_GCM,data:EB1t9GJqhabUB0bfVbP86a52r/k57yZgVoF61XoV2SolMwrSKQmoPUiOnbJZge3KLa0KRKAmar2pzwR4GeOcpO1KaTvgnMU2G6EbRIyKR+EiLg==,iv:a0CqeJXQjQszk9t4ndA8HLyxJdRZCPKl8MAR8OIvCbI=,tag:INa26q6r6cxJoxKCbgxLnw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:zn/ijNc1Zto3LHDx6QHk,iv:0wVRiYQfWwzSn0XtLnmKu0ZVUGqyivBoss/OW/5qkF4=,tag:IJsBDBl4ZwRMTViq4ziBKQ==,type:str]
-    #ENC[AES256_GCM,data:0PzZ3EUs6PbZeGaHE2sZh/0Ekb+7KhHonLdLRd+zuY3k,iv:6ImzSHzRn29gNo9+oMFWe/E8B45bj3X9G6vDpbV8K6E=,tag:ivYDkOkudY8ORkHgUqHfNg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:Pdz0LC1YSzMjwX+J0lze,iv:4rbbRVFFGECAFNcS9sFs4JXmHCJZot507uApEt75pAY=,tag:ZZb7FsLIP4YdDyZETa/qsw==,type:str]
-    #ENC[AES256_GCM,data:V3DhLQlRID77mEretJvS9GOmbbNTR9DcggaBqLV3+zsJoDpOdHe3bA9es0JzJ8QIK1jy3bFsbnWvbzn398iDMmaqz0tw8Nsb+ad6XB3ZJto=,iv:dHafuU6ipPO5rl7dTcpvHjg+d7UAhP49EWOOOTbuvL8=,tag:v+rOACL7UfNhw9+Fpb0mhA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:kqawGo6j6Dd3KeJAMzjM,iv:TpSsEqY9nU+4AB4R23fSYFTGBNEqF9Is1YRvIgqFttU=,tag:rHC/SLXVpv1VlFkhUhY2ig==,type:str]
-    #ENC[AES256_GCM,data:MV8Km7JG499F4qVVm9c5I4QM6Epx9z9sC4jQzWPbGJNEJAtr0MOxlm87JCIu/QKFP6+4m0aNNOFNl9UlHzGPP5dGeJ9vLx3Zd6XVUa5rbwUQsTubMErw,iv:RQxy6J0Z3ZqPgZj9x3jLGzBaSxKt2KlBlDSKPeP+QWM=,tag:7XBQDG8BGjU+QYWWoG65aQ==,type:comment]
-    #ENC[AES256_GCM,data:AGvE7c64rbRbBIHY10UmM3eUdyYbXNZunTHAmE667AD+cAi9chGylp52A6xvL5lxp5j/wMQ7PVS3fEtqfgVCQ8IVuvn9U1ljuDeJg8XR8IwbKIclGGTn5xKt5ZFuaGr1zrq45UFxKGRefeVG3tKsv+z0NV1EPTkgYuAcEw==,iv:fRtNir+q7/gCi6UF40GLD5Osz0zcqZ1aW+i4ouqrcx8=,tag:/gGgIZl2f7nfrus+sG9Z6g==,type:comment]
-    #ENC[AES256_GCM,data:krkzpYsAT6eh9NUFRANbdDXo0g8woAcAvZyjZsba/UpzcPq/N0UKLdWBDv8GRIPp0lJ69UFugqv7Uwf+EzwUG8VnCWevq6HFrk2ugK/Mm1c=,iv:wccDDx0eBnUX0EYbv5+22MiNGBdFvn4dlLgmF9Ea08s=,tag:o2w2i+TDPpqt5YKfMfORwQ==,type:comment]
-    #ENC[AES256_GCM,data:K6NOi56ybn3RwCasvUdjDgZ0JjwQ12OkIVPrbYv89SkLiesXfJ5082TiAKpqVh2N61aA0wR7,iv:8d879Y9TDaBSGkEOXi85ORfKpFiqKpnB74u+jEN2aFU=,tag:iR+XCpe4xtosqe28wuk2Gg==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:RQNU0Qm9kEqIAp3Cj6c=,iv:BHS/j6lJHQa2MmvGivIgY47TOA9UGvi+5zpdsDYJIcM=,tag:xX4+MytUhySKMC2foZjovA==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:3IbDM+hGFQ8Es0gQ,iv:6UXYrlEgvxn9XLt6/fM3kc2qB0r0UNZAikCUFxCfWuI=,tag:HjxQuAGYRGFXbmpNdeIa4g==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:z1acbFwN7jcMYu3BiXYuYSU=,iv:fp/FL6ej6lw51lLoovfLhMUUvQes14579pOqGeT+Q70=,tag:UiPZ2OasW2qOn/zW+czteQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:4VX0zaj8b4XYdSTgznShrSjJwBaBHhArzDnoktKX1ilAMCikniykgA==,iv:LTc4MXosV4gsIFnS3eYwcf0k0imz2hotURNrc6uSfYE=,tag:eqN3VUzsO5PtHv6hLfkCiw==,type:str]
-    #ENC[AES256_GCM,data:V2IjeerjqGB42CMsGWjZwW1CmqfJWMf94fEH7BE2wBVXVLPqV/9X14rimTZkhhM33qjBMpunhJM=,iv:NVNdhg3H80GsnFymA+js8Pn/H+fvuwk0zFjFx0sc8MU=,tag:Sb/yrmk47W3iNx63cL6IMg==,type:comment]
-    #ENC[AES256_GCM,data:CaSdqCUcc3y9oZU4QUwDASPTEY3EcG4hqg==,iv:PrwQvVuC2F6vyYIDkHhM9kPukwUFiq71x1XeggdWpKw=,tag:DRG42lbQvNSnoNtfDAAGZQ==,type:comment]
-    #ENC[AES256_GCM,data:oo2Ue5X05hGYgHOELjU6g+2KaDBTqU/jThN5taPfm5SkM+BCVTSqp4NT8mMTVfBNPJp7nxicGvYnJWfO9c4Tgoodm1qaQjgdOK/Slig=,iv:vHzD0i0VzgCto+hhwESDnnEzVPoQfrYmqchct8qlSIQ=,tag:EW+QGyIeqPaTFKwWKjLnvA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:6vgyIMk0awO7/iNi35cDOZ2jaWT0r84QpiOrhjWZzND78zDl1BgK9uJIglcfG8oW,iv:G7WH+SPYxKlGk0ORZkGnJu1+vJEmjIjJY1jQLJ540r4=,tag:76eMh6bzoj6S2pXxT+kATg==,type:str]
-    #ENC[AES256_GCM,data:4YYvX9BVEKvKecMxuHOY2SuehnB9LN9cuBe1vOxsbFbLH0b1ukq4p5X57VPLCgrmsPghmkd2NXb2IiB+cS9sRaJJw+wwOB8=,iv:2Et2HqgrGWLtT3qdiuHqYF2fwspBaNlUPFiyoopw+A0=,tag:eArat9pLPRuGxTvBy/yPFA==,type:comment]
-    #ENC[AES256_GCM,data:1S2Jui3u3ZKtwXbVLUr3hW6TW8YN9W4xYkITn7dRi0pwBubTvghQca2YVIRs2sblorsZrY+P,iv:k4RFZ7yxdWKHgOWCb4SQf+eBsQPhR6L3tsSofXFMl/I=,tag:H+QMqpG9d8p0KRsIXn2UEg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:ia8AHpU/uw==,iv:DIouUa6gIRKv8Y3y+Er5EtVqjVQLUuFP+jB5iQi+7zI=,tag:GiLFNdTjQ9btgphdXiyfpg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Xk6Mi7ClL39q0vWVDOak14u9r94=,iv:pGfhhseRLHsyKPN+dDJhXlVfZvMxo+W0++KXE39eXmY=,tag:e4G5CeijwCeK9WF6z+wY1w==,type:str]
-    #ENC[AES256_GCM,data:C2Yc2gfCod9MQnTMWvo=,iv:SC+/lefogOvhnTr5/xuogFOikJUmwv4ufZAdMvLonbs=,tag:2ew9YRNo9N3HXHQZPnZM3A==,type:comment]
-    PODNET: ENC[AES256_GCM,data:hYHXms2+oVzGSFtwlw==,iv:fqORseMSau6nhoCRUchyaVfGk5YYzvyBfRZ85++aU68=,tag:wzNiy3jpWx8/9gFMCqTtRg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:7bToZNQIQ0FeJ3AcZg==,iv:eafwcZYCCJTRBhT5dI+9vu93NqyiIYhZYBG5DAqJ/xU=,tag:jfuDMcBogpQ8kAOQUKfqPg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:tHhWoQ==,iv:CsVO9oGeY/Ej8yZzRO34F1BAZnS6rcJuMgZ6+PqmlUQ=,tag:mUoLHTzcl+x577xo4th/jg==,type:str]
+    #ENC[AES256_GCM,data:Idpe33N0UQptSH4dEKAaKAjsZF5+UwA9m4dN5qQLTda9Qjsa7rcaHchfdDtfhumJb/QiAPvraE/rGLfd4wjDgu0=,iv:ZjsV/oF+BcQBH0hFiTs18AEcnU0cFXTMFXff5oRQ8bY=,tag:HUPsDTgRe43s7hyQ2WoB1g==,type:comment]
+    #ENC[AES256_GCM,data:6LzRRxamCiauYhW0zcd6j3OnsYv2L4ahYmFPcwJalfFd5LGNyiSHp8UqiSI=,iv:ErUGjiwssonIFBdNE7Y9TDRnOFOoLlZua5bjJiR2JMM=,tag:Se1+01ltAfB52jZmMCwH5A==,type:comment]
+    VIP: ENC[AES256_GCM,data:JkRjjGBrZBC6Y81kNA==,iv:EHUhNiB2v+qEuDYmXXJ+69Yqj68ovlcWm/e2nWLuuQI=,tag:OUuUaGXEz/rO9DCk0LMcxQ==,type:str]
+    #ENC[AES256_GCM,data:9b0a/Dq0q4Jq2a9TAvCw1VPYgn0I+D7qT1uz,iv:S89cWLwO0H+H2bGpY8BrPLm0gpFZct7b/R/f5LyQrDo=,tag:CGUzVWOjtmipTNCwblGjNQ==,type:comment]
+    #ENC[AES256_GCM,data:xtjT0NoaSFHrN8PVmLbfjekBjfHIzDz1NHcLQSwwXuXnf/WELRHN2d3g9H3G5IHXMICRaEh+QxvWMymz/7DagWxYQ9zKKov+QMr0/TiAWgjubF9jzPbrxzA=,iv:C2xBBksZchy2GPq6czm98AemPrxVv8UsyFTeEzWWVfk=,tag:bR5w7QAuL5kN925ShXGY2g==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:MsoRaLCiEAiB9FDapGw=,iv:MY7UJyw+QIBlfZBZ+Jcwj/vSQt/Nw9sNGxOMHyBTIF4=,tag:QEBpreUBWoNLSrBFiEPFXg==,type:str]
+    #ENC[AES256_GCM,data:lGq2y0sK99EFDOLFTSV/JspvtOAUIw3Vwy+evHeS3Sw+IQ==,iv:P2/r2YEUceAqhh0OLU4yfsoNKjMHK9gldFr8FZHufuo=,tag:He3gqa93gB16uxAJ5VwxgA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:SCKC6IsQT9OJg4Wyag==,iv:/Ym4z8KpCfy6K+SJmFabK2u7blVlUGmRvD0kyU+Osh4=,tag:jTwnLCl5swHNr1u8D04GLA==,type:str]
+    #ENC[AES256_GCM,data:QpdKmGkyIm71nMDtgTYa9grkG3qCLuN9x+Ajg7i4ZZXmYUfmR5AsaI57zw14ggo=,iv:mxGdHIF5w0XqIGYlJtp5KRGBO0n/hF+0Sz0e2P8ViEM=,tag:jWKJfw9xix+WbUrzrtcekA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:pRHP57Lap982pzdcTVoN1V2enU06ArI37P78YrDgjg==,iv:6Up4PRrmjLJ/MnyfmUPHQ7yGzLJC7FrYCFw9XIa91XE=,tag:pslTKk7cd2nDqxHZOxa0kA==,type:str]
+    #ENC[AES256_GCM,data:OM0EnXfSZ1mou0vKEa2FNExQbEvlUeglE3CcesyAAxHfMN8FdInhBXL/m+ebGr1IIAs0U+3nmYX/XRB1kJPBh0q4XDAliPo3/ysE7oM4odBSrg==,iv:DEejiPH7JFGccr6fjm11XfCM7owWxCBkzdaxiFSM9K8=,tag:GBdMGhYVTzN533ZE0DzJjA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:FodWBG8kePAMO3ipx3Vy,iv:0ktw/W/29C7JdyO5uIcBR+1yyai9h/aCXBIJxNfcytY=,tag:4BMuPuq13zNSKdFVMGGTCg==,type:str]
+    #ENC[AES256_GCM,data:ADfNcRI9Edhcmgde5EN/rHpolwmO8s9fcpIEOTPbVm/X,iv:PxQDxZp7qvNC0Ygh6L56GV3JSPD9fiIMMCWOfA29MfA=,tag:v7eBBrlRi1FvPSzo/eWOXg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:8+TBto0YInVQQav2rP3c,iv:RiaHXZVnWa91uE5+cazLsVrtbXABzDbdZZhiGXnVeek=,tag:G+GwfIxMjWGl97ff5xefkQ==,type:str]
+    #ENC[AES256_GCM,data:tBkQpmejkfkdb+uDLnRuuCzAjSLvKfV9Y48l8Nk153DPVw+vEbK6FBUkKqemfwQVDOcPdmA/R7QYeSgpXMdx4YnZWBrldbqpP0fnoGObZxw=,iv:71155uYaoxHJSnou7tLnD05x7FD6mFOPupQBgCxK0oQ=,tag:sJJ9HFQUVEECQdGoxCZ6Gw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:+yyrEVr+fPGmjL9hXKhm,iv:oscGvQeXYajfK6kQX+KatzX5pONSOcDlMZAWVuweep4=,tag:h/7DKxOGp16717MXVPka7A==,type:str]
+    #ENC[AES256_GCM,data:XpIOg8VZT9S9sNbgzrtGAYhJpctXFXn9dcKGqw9qmces+vMr6nk+Fwa/tKkxyMBeLG3OWoXR+udM1x23NSTmOhKl+38wQnqjUErTv7AxL2Kn5B2OoE4U,iv:dz+jtdgY/j0JYmUm62Exwawspkv9my4axJtVusISVFM=,tag:PiQBkXjq+/CW7rvit6NwXg==,type:comment]
+    #ENC[AES256_GCM,data:vZCIkX/UjhmECCLZQqw7A0futaNDekNJvYXxHQ/KGSSMU7oVGFqIsvKOxgIe/nCPS9Rrsgy9iqIkvyQNPvYwnmWcNqrs3f6ml4sFlMo1tRbQhTx59aD7owUHrzkzGdafnHw3GI14kNpPzQEiNBcPy5HMAmXvuR+08j87cA==,iv:YuWRjvRd7zU1+N9ShosXjCNa1wke2L3G6AhKLvb0njc=,tag:jNCYNXcGu3xlcoJZdzjICg==,type:comment]
+    #ENC[AES256_GCM,data:HYS8YuRjLn0jrDl1UGDFQhoUK/QW6LFQKGHAWVtcirEvE1oVvYqs1FwisvnSmFFqZLqGVoce6spt3uDlsdcR2rmpWwNw24SCGeSPY2qqfkw=,iv:/t5VOyzIZruYR9ObAEuF73299mt3mJSOJLQaYCCMin0=,tag:7GD9D8ti0KmNgTgLSXa9kQ==,type:comment]
+    #ENC[AES256_GCM,data:MemRSYpNJH7/6F/SN26abO3exCeIQPQ8Ca+VDU8smb9Luc0XHlmLTbqgBwbhp3hqW7P3yF0e,iv:0TZC0nJ8LpkUQpb9UmOZofiZUGz9DmiWEUbDHmBjIBM=,tag:GQhtjTlGA/YdpVdxw5XwGA==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:Sr2VAldDjgAOWhmGDi8=,iv:pqCOI5mGnt6AbuuAwx4/LyIHe5VJgI3UPxUVNZ4aBNo=,tag:z8iLSsCI0f69WXQlTFnxnQ==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:hVVFtNrUcsUtjFzA,iv:SDbh8G80JjxLD/5Sf2EA2iGy08HYPuviervIvM4s7qY=,tag:tJ9/YDhaHdPCbtTaEZV07Q==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:lW/FHFN2cb1dhBYtmKgAJkc=,iv:ulBwRX0B4G6NVGC/aS4ntPslm04GbKJiovpW1wrs2Zw=,tag:h1ZW7bROiCTzWr1DKJSQog==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:F2W2xhI/qc9IAAsXjXY78VrALgDQMB8Oc7QbwSOI/2gGOxaJRl4tew==,iv:QV+PvaLPkZKM9ugam9+AaS/A6X4TfexT3C2qnDtRbG0=,tag:IUiCRLIbTYPSjMRnvjBgzQ==,type:str]
+    #ENC[AES256_GCM,data:pErLALptD3n3gxQrDhz1AwJb0MHGypfXFmdldmnfTnOp3/x7aXrZ3rL22M3miydD2ocZ2etr68A=,iv:7svg5uODJ6c/phgFQ5f0C1g1KsTTcqwVO2j9Ho4DoOc=,tag:IoUQeW5PUmGU50FicM4nTQ==,type:comment]
+    #ENC[AES256_GCM,data:3vzgF/N3UwEK64eXb254NLQvzyNNxgj9GA==,iv:OzU1ux3RCTrGT4Swhgbml/o66UtNYC2J7biDFJ804zw=,tag:KuR3cJRZHLc29asVb++iOQ==,type:comment]
+    #ENC[AES256_GCM,data:hEMn5ct1wHYQ5sya9f+D8/EBQA7pq+Gc8QZmmYY2WZ8cuBl07mYH6TjxgQcn7poHh0cFWkidQm472lGK+KiV8trxhzPjI8KngTFeN9Y=,iv:yl0XVLpVAGd5ZEd+U3nfeJwFFQGi9XdP/gu46G9e0vM=,tag:LjLquXCjnrDbwfIA4F9acA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:8pQM0BdZLXS++/yYmZZFWY/MAXDvW4cdPihoKW/ekboEeXXW+bPzDxSI/Z0WJAFn,iv:ui8wxCmsrZrtDRn2DViWSYQXIw97UZtO9ncEUChz7uM=,tag:PdwL7gibWzDWwquji2ZVvw==,type:str]
+    #ENC[AES256_GCM,data:co6GUzs/1T3hKcMg2sfLckh5IB9juIkgbJq4GuwGItLNslFa9KGaNPoT52YflkV3ZFdD2nx49kYR+yJbsnv44Ey8+w+FkHA=,iv:7nhnGHdwzgKVtvdn4PE4x+aGh7SoLUHLUrSD8FL+sOo=,tag:1js7TANB5cTq/QH4V7vtcA==,type:comment]
+    #ENC[AES256_GCM,data:xE9H7OtbyKkZxEoqTXJ8qO03qIGA8NBD71fibBqc0I60HxQJNiRl30ldjJzP1apPIZ+dN6eN,iv:ZWPxrl3VVXigJ69Ve1rYXJ77LbnUlvalWF1w/cs/CyM=,tag:EsXcwGlpkOF28rDNpSBhGQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:1vb0GjC0yA==,iv:0dGg+hLwhFgtlYLgtsUIkNjiGeJcfbP/k9szCubJQqw=,tag:Sx7tUsXztY66uraUMOpIIw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:vx1jKARzgVTSwpsQLdjNqpL6CtE=,iv:FPBwwgfFgqP6FjKSSKvQbcUUyzG6YjmV/xZydLaJSdU=,tag:YvlesvtBPFvC0wFCjXElsw==,type:str]
+    #ENC[AES256_GCM,data:EFSScgyZbZa/EJC9Tc8=,iv:vOob75Ao23QXnFPHftn21QmR0C99Syob4pb09pXBNUk=,tag:Y+c49/4Wl9jBor8En+USdA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:4EjvaMM6oiWQ2jQVEg==,iv:cH3dNgefLrpNsKQE/XBqglD/kkdGj0w0w4cGMYaSth0=,tag:V/y7vKJ5QCyGPVeLtXYVaA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:Bes/OYFPOBlZ/tZxlA==,iv:W+7dsdMCVJjSgbM62P/pwXLOIj2wwukx4KWJt29/Cls=,tag:DusSl+pgiBwz9ynXclretQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:CkYh1g==,iv:Hyt/qJT5nW5IAsWy3sp/P4iar359ONprA8aTzyTn6MM=,tag:lN2GnZa36NgguQ0cyh01cw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,14 +50,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwc2VCS21GTDBYSGc2U0c3
-            VnVPWVFCdEdlczdzdWkzYjU0dTZFa2ozV0ZzCjdsdlBIcjlDTFhEK2t5aUM2eEl4
-            aDY5Q3AwcmZEN1lyZU9tbStINmpVcW8KLS0tIEpJcEo4UDVENmRFSHAvSlliTU5V
-            ektHeERnNWpFd0R3aURQRnVseFRMSFEK1JC4lVMDEnRpnrXV92/zk3AtqHHPvnb0
-            5NcZ616Q+TtArdEGr3amCxAnz8ShTVi69yf4WYhgfGLiwo1ZibYWVg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLem1RSmRKbkh5ZGJkNm1v
+            eTdoTzZPT1RDSkdvU1NGdFphV2NSczUvL1FFCndHUHVRVlZWbjJDTmtISis3THNL
+            QlZVQk9PS3J2cHNlTjRjb2t0QmEzcmcKLS0tIEREWm5tVW5UMW9iZlhCc3kvb28x
+            bXJpYzRVOVZ4YnBXM2pvck1PbzhPOGcKg1b60HRehnGvQbqgdfXogF0sZuQiNQtX
+            cRPkhLFthdTBKqGMYvvg1GAjEZdNxjvDpan5xhSvkB7adxZXKv6djw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-27T01:01:08Z"
-    mac: ENC[AES256_GCM,data:GNNXttuUVUbI27OjX7U4NFsAANNXZwKHNr2LLtk3PEU1MUgaf61nj3Q6FwKCBEJMGafGN9iCgWCcBiPV/MUlWdn0i9Rkw99sNUE9Jiw5T51DhAXrmdBaySA9JEnqm1EJSsROLL+Vq6aadiWzZ6SX/0RYSxdB+i/2OmVsCsH0+aw=,iv:QeJ0WS5mn2LmtVUStGD0MIl597ujei7Yl7Rl2D6+L3Y=,tag:bAV07zh+3rbrFeevCC18Uw==,type:str]
+    lastmodified: "2024-12-27T01:36:48Z"
+    mac: ENC[AES256_GCM,data:ka1qR/ZpoMZfPHltjdS+mISCpIxUL4DWh1cnFUn2DEHJDIDb2FnIyO+ZTZjDyMlWeRqXB8fubD7KyUXGtaqVX4G89TlEm34zTDUwq91zVJ+0txjXzCe0KJk8noq0xoUWpY+0N8ASgyKoL1rNQ13qGaTNKf8pN5y/ESFfa+fQ2So=,iv:JGKtBdpRb4La7gI9VidhxdwloURNrr1788/S26WBtrI=,tag:Q76f9+/qtZX13QcGFpwU5Q==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
